--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-pokemon {
+  background-image: url('/wallpaperflare.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.bg-dark {
+  background-color: #000000B2
+}
+
+.bg-gray-solid {
+  background-color: #272727;
+}
+
+.react-icons {
+  display: inline;
+  vertical-align: text-bottom;
+}
+
+.pokedex-left-view {
+  top: 29.8%;
+  left: 13.6%;
+  height: 31.5%;
+  width: 26.6%;
+}
+
+.pokedex-right-view {
+  top: 32.3%;
+  left: 54.1%;
+  height: 48.1%;
+  width: 24.5%;
+}
+
+.pokedex-search-button {
+  top: 83.7%;
+  left: 17.1%;
+  height: 9.8%;
+  width: 12.2%;
+}
+
+.pokedex-view-button {
+  top: 85.1%;
+  left: 54.6%;
+  height: 8.2%;
+  width: 10.5%;
+}
